# udp-socket-programming

./: .gitignore  README.md  check_md5sum_client.py  check_md5sum_server.py  generate_text.py  pyproject.toml  test_file.txt  urft_client.py  urft_server.py
assets/: file_test
rdt_3.0/: urft_client.py  urft_server.py
src/: client.py  server.py
src/udp_socket/: __init__.py  types.py  udp_socket_client.py  udp_socket_server.py  utils.py
